especificacio quasi feta, menys replies
